--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -63,7 +63,7 @@ flutter:
   uses-material-design: true
   
   assets:
-    - assets/images/widget_Img_1.png
+    - assets/images/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
