--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   pinput: ^5.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  font_awesome_flutter: ^10.7.0
   cupertino_icons: ^1.0.8
   awesome_dialog: ^3.2.1
 
