--- a/tubes_mobpro/android/app/build.gradle
+++ b/tubes_mobpro/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     namespace = "com.example.tubes_mobpro"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion = "21.1.6352462"
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
