--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   cupertino_icons: ^1.0.8
   awesome_dialog: ^3.2.1
+  sliding_up_panel: ^2.0.0+1
 
 dev_dependencies:
   flutter_test:
