--- a/tubes_mobpro/android/app/build.gradle
+++ b/tubes_mobpro/android/app/build.gradle
@@ -23,10 +23,13 @@ android {
         applicationId = "com.example.tubes_mobpro"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        // minSdk = flutter.minSdkVersion
+        // targetSdk = flutter.targetSdkVersion
         versionCode = flutter.versionCode
         versionName = flutter.versionName
+        minSdkVersion 21
+        targetSdkVersion 33
+        compileSdkVersion 34
     }
 
     buildTypes {
