--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   camera: ^0.11.0+2
   permission_handler: ^11.3.1
   path_provider: ^2.1.5
+  google_mlkit_text_recognition: ^0.14.0
 
 dev_dependencies:
   flutter_test:
