--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   # Dependency supaya saat mengubah 1000000 ke string hasilnya akan seperti ini: 1,000,000.
   # Untuk secara singkat, ini adalah number formatter. 
   intl: ^0.18.0
+  horizontal_scroll_view: ^0.0.5
 
 dev_dependencies:
   flutter_test:
