--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   # Untuk secara singkat, ini adalah number formatter. 
   intl: ^0.18.0
   horizontal_scroll_view: ^0.0.5
+  flutter_secure_storage: ^9.2.2
+  provider: ^6.1.2
+  localstorage: ^5.0.0
 
 dev_dependencies:
   flutter_test:
