--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   provider: ^6.1.2
   localstorage: ^5.0.0
+  firebase_core: ^3.9.0
+  firebase_messaging: ^15.1.6
 
 dev_dependencies:
   flutter_test:
