--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   localstorage: ^5.0.0
   firebase_core: ^3.9.0
   firebase_messaging: ^15.1.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
