--- a/tubes_mobpro/pubspec.yaml
+++ b/tubes_mobpro/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_core: ^3.9.0
   firebase_messaging: ^15.1.6
   image_picker: ^1.1.2
+  http: ^1.4.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
