--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,8 @@ on:
       - haidar
   pull_request:
     types: [opened, synchronize, reopened]
+    branches:
+      - haidar
 
 jobs:
   sonarqube:
@@ -17,22 +19,34 @@ jobs:
           ref: haidar
           fetch-depth: 0  # penting untuk SonarQube
 
+      - name: Setup JDK for SonarQube
+        uses: actions/setup-java@v4
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: "maven"
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.32.1'  # sesuaikan versi Flutter kamu
+          channel: stable
 
       - name: Install dependencies
-        working-directory: ./tubes_mobpro
+        working-directory: tubes_mobpro
         run: flutter pub get
 
       - name: Analyze (optional)
-        working-directory: ./tubes_mobpro
+        working-directory: tubes_mobpro
         run: flutter analyze
+
+      - name: Run Unit Tests # optional
+        working-directory: tubes_mobpro
+        run: flutter test
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         with:
-          projectBaseDir: ./tubes_mobpro
+          projectBaseDir: tubes_mobpro
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
