--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
       #   run: flutter analyze
       
       - name: Run tests
-        run: flutter test .\test\
+        run: flutter test \test\
