--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,10 @@
 name: Build
 on:
   push:
-    branches:
-      - haidar
+    branches: [main]
   pull_request:
     types: [opened, synchronize, reopened]
-    branches:
-      - haidar
+    branches: [main]
 
 jobs:
   sonarqube:
@@ -16,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          ref: haidar
+          ref: main
           fetch-depth: 0  # penting untuk SonarQube
 
       - name: Setup JDK for SonarQube
@@ -35,14 +33,6 @@ jobs:
       - name: Install dependencies
         working-directory: tubes_mobpro
         run: flutter pub get
-
-      - name: Analyze (optional)
-        working-directory: tubes_mobpro
-        run: flutter analyze
-
-      - name: Run Unit Tests # optional
-        working-directory: tubes_mobpro
-        run: flutter test
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
