--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,13 +34,9 @@ jobs:
         working-directory: tubes_mobpro
         run: flutter pub get
 
-      - name: Analyze (optional)
-        working-directory: tubes_mobpro
-        run: flutter analyze
-
       - name: Run Unit Tests # optional
         working-directory: tubes_mobpro
-        run: flutter test
+        run: flutter test \test\
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
