--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,9 @@ jobs:
         working-directory: tubes_mobpro
         run: flutter pub get
 
-      - name: Run Unit Tests # optional
-        working-directory: tubes_mobpro
-        run: flutter test \test\
+      # - name: Run Unit Tests # optional
+      #   working-directory: tubes_mobpro
+      #   run: flutter test \test\
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
